# AI-Reviewer

./: .gitattributes  .gitignore  Copy of PaperScraperV2.ipynb  Modelfile  README.md  launch_ai_reviewer.bat  launch_ai_reviewer.command  launch_ai_reviewer.ps1  launch_ai_reviewer.sh  pyproject.toml  requirements.txt  test_heavyweight.py  test_heavyweight2.py  test_heavyweight3.py  test_package.py  test_qwen_roles.py
ai_reviewer/: __init__.py  __main__.py  cli.py  config.py  launcher_checks.py  logging_utils.py  output_verifier.py  platform.py
audits/: 20260325163524_test-existingphactorpaper_current_state.json  20260325163524_test-existingphactorpaper_current_state.md  20260327051312_miniaturization_d2b_current_state.json  20260327051312_miniaturization_d2b_current_state.md  TESTING_PROCEDURE.md  assertion_verification_proof.md  before_after_comparison.md  before_after_grounding_density_specificity.md  citation_checking_proof.md  comment_spread_metrics.json  compliance_checking_proof.md  concurrency_design.md  context_pack_sample_journal.md  current_state_note_quality_integration.md  deep_review_quality_eval_project1.md  deep_review_quality_eval_project2.md  docx_native_analysis.md  docx_native_proof.md  evidence_grounding_gap_analysis.md  evidence_grounding_improvements.md  final_concurrency_figure_audit.md  final_harsh_audit_packet.json  final_harsh_audit_packet.md  gemini_docs_truth_map.md  gemini_fix_validation_report.md  gemini_forensic_audit.md  gemini_independent_screening_project1.md  gemini_independent_screening_project2.md  gemini_validation_matrix.md  (+32 more)
(+1097 files in other folders)
