[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-reviewer"
version = "0.1.0"
description = "Local-first paper review assistant powered by Ollama"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "AI-Reviewer Contributors"}]
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "requests>=2.31.0",
  "pydantic>=2.7.4",
  "PyYAML>=6.0.1",
  "pypdf>=4.2.0",
  "pymupdf>=1.24.9",
  "pymupdf4llm>=0.0.14",
  "python-docx>=1.1.2",
  "docx2python>=3.6.2",
  "mammoth>=1.12.0",
  "bibtexparser>=1.4.4",
  "habanero>=2.3.0",
  "pyalex>=0.21",
  "numpy>=1.26.4",
  "backoff>=2.2.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-mock>=3.14.0"
]

[project.scripts]
ai-reviewer = "ai_reviewer.cli:main"

[tool.setuptools]
packages = [
  "ai_reviewer",
  "ai_reviewer.models",
  "ai_reviewer.ingest",
  "ai_reviewer.review",
  "ai_reviewer.benchmarks",
  "ai_reviewer.projects",
  "ai_reviewer.slack",
  "ai_reviewer.training",
  "ai_reviewer.tools"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "smoke: real local model smoke tests",
  "integration: integration tests"
]
